# resonance-compass

./: .gitignore  CLAUDE.md  FABLE-KERNEL.md  HANDS.md  README.md  package-lock.json  package.json
.claude/: settings.json
docs/: ANDROID-BUILD-NOTES.md  BUILD-SEQUENCE.md  CHECKLIST.md  CLAUDE-CONTEXT.md  CONTRIBUTING.md  FEATURE-BOARD.md  GALAXY-LISTING.md  MUSICIANS-COMPASS-VISION.md  RELEASE-NOTES-v2.0.0.md  SCREEN-INVENTORY.md  V3-BUILD-SEQUENCE.md  VISUALIZER-PLAYABLE-MODE.md  v1-v2-gap-report.md
docs/blueprints/: dbp_backend.ai.json  dbp_frontend.ai.json  pbp_resonance_compass.ai.json
docs/blueprints/layers/: obp_components.ai.json  obp_routes.ai.json  obp_rust_backend.ai.json  obp_stores.ai.json  obp_styles.ai.json  obp_types.ai.json
docs/blueprints/routes/: fbp_focus.ai.json  fbp_fragments.ai.json  fbp_fragments_studio.ai.json  fbp_history.ai.json  fbp_home.ai.json  fbp_library.ai.json  fbp_library_album_id.ai.json  fbp_library_artist_id.ai.json  fbp_liked.ai.json  fbp_lyrics.ai.json  (+12 more)
docs/session-reports/: 2026-06-30-identity-migration.md
release/: resonance-compass-v2.0.0.apk.idsig
reports/: 2026-06-30-assessment-manual.md  2026-06-30-assessment.md  2026-07-04-assessment.md  analysis.json  inventory.json
scripts/: sync-android-extras.mjs
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/android-extras/: MediaPermissionPlugin.kt
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  equalizer.rs  fragment_engine.rs  lib.rs  media_permission.rs  mic_spike.rs  visualizer.rs
src/routes/: +layout.svelte  +page.svelte
(+64 files in other folders)
