[package]
name = "resonance-compass"
version = "2.0.0"
description = "A sovereign music player and self-understanding system"
authors = ["Quantum Weaver"]
edition = "2021"

[lib]
name = "resonance_compass_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rodio = { version = "0.20", features = ["symphonia-all"] }
lofty = "0.22"
base64 = "0.22"
crossbeam = "0.8"
rustfft = "6"

[profile.release]
strip = true
opt-level = "s"
lto = "thin"
